--- a/public/css/print.css
+++ b/public/css/print.css
@@ -1,1 +1,14 @@
-.card__image{height:50%}@page{size:auto;margin:5mm 10mm}
+.card__image {
+  height: 50%; }
+
+a, a:link, a:visited {
+  color: black;
+  text-decoration: none; }
+
+@page {
+  size: auto;
+  margin: 5mm 10mm; }
+
+.page-break {
+  display: block;
+  page-break-before: always; }
