--- a/public/css/print.css
+++ b/public/css/print.css
@@ -1,9 +1,28 @@
-.card__image {
-  height: 50%; }
+p {
+  margin: 0; }
 
 a, a:link, a:visited {
   color: black;
   text-decoration: none; }
+
+.card__title {
+  font-size: 24px;
+  font-weight: normal; }
+
+.card__image img, .card__image + h2 {
+  display: none; }
+
+.section__title {
+  font-size: 18px;
+  font-weight: normal; }
+
+.section__subtitle {
+  font-size: 18px;
+  font-weight: normal;
+  text-decoration: underline; }
+
+.no-print {
+  display: none; }
 
 @page {
   size: auto;
