--- a/src/scss/print.scss
+++ b/src/scss/print.scss
@@ -1,12 +1,36 @@
-.card{
-  &__image{
-    height: 50%;
-  }
+p{
+  margin: 0;
 }
 
 a, a:link, a:visited{
   color: black;
   text-decoration: none;
+}
+
+.card__title{
+  font-size: 24px;
+  font-weight: normal;
+}
+
+.card__image{ 
+  & img, & + h2{
+    display: none;
+  }
+}
+
+.section__title{
+  font-size: 18px;
+  font-weight: normal;
+}
+
+.section__subtitle{
+  font-size: 18px;
+  font-weight: normal;
+  text-decoration: underline;
+}
+
+.no-print{
+  display: none;
 }
 
 @page { 
