Change layout and remove technologies and sources

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,82 +1,1 @@
-html, body {
-  height: 100%; }
-
-body {
-  color: #333;
-  font-family: 'Open Sans', sans-serif;
-  margin: 0;
-  overflow-x: hidden;
-  padding: 0; }
-
-h1, h2, h3 {
-  font-family: 'Roboto', sans-serif; }
-
-h3 {
-  text-decoration: underline; }
-
-p {
-  line-height: 28px; }
-
-ul li {
-  line-height: 28px; }
-
-select option {
-  font-family: 'Open Sans', sans-serif;
-  font-size: 24px; }
-
-.header {
-  background-color: #FBFBFB;
-  border-bottom: 1px solid #CCC;
-  padding: 16px;
-  text-align: center; }
-  .header img {
-    max-width: 200px;
-    width: 50%; }
-  @media (min-width: 1024px) {
-    .header {
-      border-bottom: none;
-      bottom: 0;
-      left: 0;
-      position: fixed;
-      top: 0;
-      width: 360px; } }
-
-@media (min-width: 1024px) {
-  .content {
-    bottom: 0;
-    left: 390px;
-    position: absolute;
-    right: 0;
-    top: 0;
-    width: calc(100% - 390px); } }
-
-.content .section {
-  border-bottom: 1px solid #CCC;
-  padding: 16px 24px; }
-
-.content .comment {
-  color: #CCC;
-  font-style: italic; }
-  .content .comment a {
-    color: darkgray; }
-
-.content .hidden {
-  display: none; }
-
-.list--boxes {
-  margin-top: 0;
-  padding-left: 0; }
-
-.box__container {
-  border-bottom: 1p solid gray;
-  list-style-type: none; }
-
-.box__item {
-  display: inline-block;
-  vertical-align: top; }
-
-.box__left {
-  width: 100px; }
-
-.box__description {
-  width: calc(100% - 130px); }
+body,html{height:100%}body{color:#333;font-family:Open Sans,sans-serif;margin:0;overflow-x:hidden;padding:0}h1,h2,h3{font-family:Roboto,sans-serif}h3{text-decoration:underline}p,ul li{line-height:28px}select option{font-family:Open Sans,sans-serif;font-size:24px}.header{background-color:#fbfbfb;border-bottom:1px solid #ccc;padding:16px;text-align:center}.header img{max-width:200px;width:50%}@media (min-width:1024px){.header{border-bottom:none;bottom:0;left:0;position:fixed;top:0;width:360px}}@media (min-width:1024px){.content{bottom:0;left:390px;position:absolute;right:0;top:0;width:calc(100% - 390px)}}.content .section{border-bottom:1px solid #ccc;padding:16px 24px}.content .comment{color:#ccc;font-style:italic}.content .comment a{color:#a9a9a9}.content .hidden{display:none}.list--boxes{margin-top:0;padding-left:0}.box__container{border-bottom:1p solid gray;list-style-type:none}.box__item{display:inline-block;vertical-align:top}.box__left{width:100px}.box__description{width:calc(100% - 130px)}
