--- a/public/css/print.css
+++ b/public/css/print.css
@@ -1,33 +1,1 @@
-p {
-  margin: 0; }
-
-a, a:link, a:visited {
-  color: black;
-  text-decoration: none; }
-
-.card__title {
-  font-size: 24px;
-  font-weight: normal; }
-
-.card__image img, .card__image + h2 {
-  display: none; }
-
-.section__title {
-  font-size: 18px;
-  font-weight: normal; }
-
-.section__subtitle {
-  font-size: 18px;
-  font-weight: normal;
-  text-decoration: underline; }
-
-.no-print {
-  display: none; }
-
-@page {
-  size: auto;
-  margin: 5mm 10mm; }
-
-.page-break {
-  display: block;
-  page-break-before: always; }
+p{margin:0}a,a:link,a:visited{color:#000;text-decoration:none}.card__title{font-size:24px;font-weight:400}.card__image+h2,.card__image img{display:none}.section__subtitle,.section__title{font-size:18px;font-weight:400}.section__subtitle{text-decoration:underline}.no-print{display:none}@page{size:auto;margin:4mm 6mm}.page-break{display:block;page-break-before:always}
